test/gpu/native/errors/assertOnGpuNoLoops.good
assertOnGpuNoLoops.chpl:3: error: Found GPU attributes on a variable declaration, but no subexpression to apply them to
